--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 * {
     box-sizing:border-box;
-    margin: 0;
-    padding: 0;
     color: black;
     font-family: Helvetica, Arial, sans-serif;
 }
@@ -10,40 +8,49 @@ body {
     background-color:#fff;
 }
 
-.container {
+.strtcontainer {
+    width:100vw;
+    justify-content: center;
+    align-items: center;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 24px;
     text-align: center;
 }
 
-#highScores {
+.highScores {
+    margin-top: 20px;
+    margin-left: 20px;
     position: static;
     font-size: 24px;
     color:#AC4FC6;
+    background-color: #fff;
+    border:none;
 }
 
 #timer {
+    margin-top: 20px;
     font-size: 24px;
     position:right;
-    top: 40px;
-    left: 80px;
+    margin-right: 20px;
+    float:right;
 }
 
 .questions {
     font-family: Helvetica, Arial, sans-serif;
-    display: grid;
+    display: flex;
     text-align: center;
 }
 
 
 .h1 {
-    padding-top: 200px;
+    padding: 200px 50px;
     margin: 100px 50px;
     text-align: center;
 }
 
 .p {
-    margin: 100px;
+    padding: 400px;
+    margin: 100px 200px;
     display: inline-block;
 }
 
@@ -54,13 +61,90 @@ body {
   border-radius: 8px;
   color: white;
   padding: 16px 32px;
+  background-color:#310062 ;
   margin: 20px 4px;
   text-align: center;
   display: inline-block;
   font-size: 24px;
 }
 
-.start-btn:hover {
-    background-color: #AC4FC6; 
+#start-btn:hover {
+    background-color: #AC4FC6;
+    cursor:pointer;
+}
+
+.qContainer {
+    align-items: center;
+    padding-left: 400px;
+    padding-right: 200px;
+}
+
+#one-btn, #two-btn, #three-btn, #four-btn {
+    border-radius: 12px;
+    width: 300px;
     color: white;
-  }
+    padding: 16px 32px;
+    background-color:#310062;
+    column-gap: 10px;
+    text-align: left;
+    display: flex;
+    font-size: 32px;
+    margin: 20px;
+}
+
+#one-btn:hover, #two-btn:hover, #three-btn:hover, #four-btn:hover {
+    cursor: pointer;
+    background-color: #AC4FC6;
+}
+
+
+.qh1 {
+    font-size: 64px;
+}
+
+#submit-btn {   
+    width: auto;
+    height: auto;
+    border-style: none;
+    border-radius: 8px;
+    color: white;
+    padding: 16px 32px;
+    background-color:#310062 ;
+    margin: 20px 4px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+}
+      
+#submit-btn:hover {
+    background-color: #AC4FC6;
+    cursor:pointer;
+}   
+
+#back-btn {   
+    width: auto;
+    height: auto;
+    border-style: none;
+    border-radius: 8px;
+    color: white;
+    padding: 16px 32px;
+    background-color:#310062 ;
+    margin: 20px 4px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+}
+
+#clearscore-btn {   
+    width: auto;
+    height: auto;
+    border-style: none;
+    border-radius: 8px;
+    color: white;
+    padding: 16px 32px;
+    background-color:#310062 ;
+    margin: 20px 4px;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+}
