--- a/style.css
+++ b/style.css
@@ -2,149 +2,75 @@
     box-sizing:border-box;
     color: black;
     font-family: Helvetica, Arial, sans-serif;
-}
-
-body {
     background-color:#fff;
+    font-size: 30px;    
 }
 
-.strtcontainer {
-    width:100vw;
-    justify-content: center;
-    align-items: center;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 24px;
-    text-align: center;
-}
-
-.highScores {
+header {
     margin-top: 20px;
+}
+
+#scores-btn {
     margin-left: 20px;
-    position: static;
-    font-size: 24px;
+    position: left; 
+    float:left;  
     color:#AC4FC6;
-    background-color: #fff;
-    border:none;
+    text-decoration: none;
 }
 
 #timer {
-    margin-top: 20px;
-    font-size: 24px;
     position:right;
     margin-right: 20px;
     float:right;
 }
 
-.questions {
-    font-family: Helvetica, Arial, sans-serif;
+#topic {
+    margin-top: 100px;
+    font-size: 200%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#container {
+    width: 100vw;
     display: flex;
-    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-
-.h1 {
-    padding: 200px 50px;
-    margin: 100px 50px;
+#content {
+    margin-bottom: 20px;
+    padding: 10px 10px;
+    margin-top: 0;
     text-align: center;
-}
-
-.p {
-    padding: 400px;
-    margin: 100px 200px;
-    display: inline-block;
 }
 
 #start-btn {
-  width: auto;
-  height: auto;
-  border-style: none;
-  border-radius: 8px;
-  color: white;
-  padding: 16px 32px;
-  background-color:#310062 ;
-  margin: 20px 4px;
-  text-align: center;
-  display: inline-block;
-  font-size: 24px;
+    display: flex;
+    margin-top: 20px;
+    border-style: none;
+    border-radius: 12px;
+    width:200px;
+    margin: 0 auto;
+    color: white;
+    padding: 10px 10px;
+    text-decoration: none;
+    font-size: 30px;
+    background-color:#310062;
+    align-items: center;
+    justify-content: center;
 }
 
 #start-btn:hover {
     background-color: #AC4FC6;
     cursor:pointer;
 }
-
-.qContainer {
-    align-items: center;
-    padding-left: 400px;
-    padding-right: 200px;
+/* responsive design view, adjust font and screen better, once its on a smaller screen for better view on different device/screen size*/
+@media screen and (max-width:520px){
+    #topic {justify-content:center; margin-top: 15px;}
+    #start-btn {width:50%;}
+   #scores-btn, #timer, #topic, #container, #content, #start-btn {font-size: 10px; display:flex}
 }
+    
 
-#one-btn, #two-btn, #three-btn, #four-btn {
-    border-radius: 12px;
-    width: 300px;
-    color: white;
-    padding: 16px 32px;
-    background-color:#310062;
-    column-gap: 10px;
-    text-align: left;
-    display: flex;
-    font-size: 32px;
-    margin: 20px;
-}
-
-#one-btn:hover, #two-btn:hover, #three-btn:hover, #four-btn:hover {
-    cursor: pointer;
-    background-color: #AC4FC6;
-}
-
-
-.qh1 {
-    font-size: 64px;
-}
-
-#submit-btn {   
-    width: auto;
-    height: auto;
-    border-style: none;
-    border-radius: 8px;
-    color: white;
-    padding: 16px 32px;
-    background-color:#310062 ;
-    margin: 20px 4px;
-    text-align: center;
-    display: inline-block;
-    font-size: 24px;
-}
-      
-#submit-btn:hover {
-    background-color: #AC4FC6;
-    cursor:pointer;
-}   
-
-#back-btn {   
-    width: auto;
-    height: auto;
-    border-style: none;
-    border-radius: 8px;
-    color: white;
-    padding: 16px 32px;
-    background-color:#310062 ;
-    margin: 20px 4px;
-    text-align: center;
-    display: inline-block;
-    font-size: 24px;
-}
-
-#clearscore-btn {   
-    width: auto;
-    height: auto;
-    border-style: none;
-    border-radius: 8px;
-    color: white;
-    padding: 16px 32px;
-    background-color:#310062 ;
-    margin: 20px 4px;
-    text-align: center;
-    display: inline-block;
-    font-size: 24px;
-}
