--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
     font-size: 30px;
 }
 
-#scores-btn {
+#highscores-btn {
     margin-left: 20px;
     position: left; 
     float:left;  
